add Hero component, add Styles for Nav Components

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,4 +1,5 @@
 $ds-accent-color: #BE8C6B;
+$ds-background: #333333;
 $ds-gray-100: #F8F8F8;
 $ds-gray-200: #EEEEEE;
 $ds-gray-600: #B7B7B7;
@@ -37,3 +38,7 @@ $h2-font-size: 2.143rem;
 $h3-font-size: 1.375rem;
 $h4-font-size: 1rem;
 $h5-font-size: .875rem;
+
+/* Jumbotron */
+
+$jumbotron-padding: 2rem;
