--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,7 +2,7 @@
 .ds-footer-top {
     position: relative;
     padding: 80px 0 20px;
-    background: url('../images/banner-nav2.jpg') 50% 50% no-repeat;
+    background: url('../images/banner-nav.jpg') 50% 50% no-repeat;
     background-size: cover;
     &:after {
         @include bg-overlay($ds-black,
@@ -12,4 +12,21 @@
 
 .ds-footer-top-content {
     @include relative-zindex;
+}
+
+.ds-footer-text {
+    font-size: .75rem;
+    color: $gray-600;
+}
+
+.ds-footer-p {
+    line-height: 2;
+}
+
+.ds-footer-contact-list {
+    margin-bottom: .75rem;
+}
+
+.ds-footer-contact-item {
+    padding: .2rem 0;
 }
