--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -2,4 +2,5 @@
 @import 'hero.scss';
 @import 'footer.scss';
 @import 'page-intro.scss';
-@import 'helpers.scss'
+@import 'helpers.scss';
+@import 'services-group';
