--- a/src/scss/components/_services-group.scss
+++ b/src/scss/components/_services-group.scss
@@ -1,3 +1,14 @@
+@mixin ds-services-item-active {
+    background-color: $gray-900;
+    a {
+        color: $ds-white;
+        text-decoration: none;
+    }
+    img {
+        filter: brightness(3);
+    }
+}
+
 .ds-services-group {
     height: 100px;
     background: url('../images/witamy-tlo.jpg') 50% 50% no-repeat;
@@ -10,10 +21,22 @@
     padding: 1rem 1.3rem 0;
     text-align: center;
     @include ds-size(25%,100%);
+    pointer-events: none;
+    &:hover {
+        @include ds-services-item-active;
+        @include ds-basic-transition;
+    }
+    a {
+        pointer-events: auto;
+    }
 }
 
 .ds-services-item-title {
     margin-top: .25rem;
     @include ds-font-light-secondary;
     font-size: .6875rem;
+}
+
+.ds-services-item.active {
+    @include ds-services-item-active;
 }
