--- a/src/scss/components/_service-box.scss
+++ b/src/scss/components/_service-box.scss
@@ -26,7 +26,7 @@
 }
 
 .ds-services-box-shadow {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 15px;
     background-color: rgba($ds-black, .075);
