add styles for Archive Widget

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -42,3 +42,6 @@ $h5-font-size: .875rem;
 /* Jumbotron */
 
 $jumbotron-padding: 2rem;
+//input
+$input-group-addon-bg: $gray-800;
+$input-group-addon-border-color: none;
