--- a/src/scss/components/_post-widgets.scss
+++ b/src/scss/components/_post-widgets.scss
@@ -54,3 +54,12 @@
 .ds-post-widget-archive-header {
     margin-bottom: .75rem;
 }
+
+// widget popularne wpisy
+.ds-post-widget-popular-item {
+    margin: 1.2rem 0;
+}
+
+.ds-post-widget-popular-img {
+    margin-right: 2.5rem;
+}
