add Kategorie Widget

--- a/src/scss/components/_post-widgets.scss
+++ b/src/scss/components/_post-widgets.scss
@@ -63,3 +63,16 @@
 .ds-post-widget-popular-img {
     margin-right: 2.5rem;
 }
+
+// widget kategorie
+.ds-post-widget-categories {
+    padding: 2rem 0 .8rem;
+}
+
+.ds-post-widget-categories-item {
+    margin-bottom: .175rem;
+    margin-right: .15rem;
+    padding: .4rem 1rem;
+    line-height: 1;
+    background-color: $ds-black;
+}
