--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -42,6 +42,12 @@ $h5-font-size: .875rem;
 /* Jumbotron */
 
 $jumbotron-padding: 2rem;
-//input
+// input
 $input-group-addon-bg: $gray-800;
 $input-group-addon-border-color: none;
+// paginacja
+$pagination-color: $gray-900;
+$pagination-bg: none;
+$pagination-border-width: 0;
+$pagination-hover-color: $ds-accent-color;
+$pagination-hover-bg: none;
