add Styles for Formularz Component

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -42,9 +42,12 @@ $h5-font-size: .875rem;
 /* Jumbotron */
 
 $jumbotron-padding: 2rem;
+
 // input
 $input-group-addon-bg: $gray-800;
 $input-group-addon-border-color: none;
+$input-border-color: $ds-input-border-color;
+
 // paginacja
 $pagination-color: $gray-900;
 $pagination-bg: none;
