--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -4,3 +4,11 @@
     font-size: .6rem;
     line-height: 2;
 }
+
+.btn-lg {
+    padding: .6re 1.25rem;
+    letter-spacing: .125rem;
+    font-size: .875rem;
+    line-height: 1.2;
+}
+
