--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -41,3 +41,13 @@
     font-weight: 300;
     letter-spacing: .15rem;
 }
+
+.ds-product-page-add-to-cart {
+    font-size: .6875rem;
+    font-weight: 300;
+    letter-spacing: .15rem;
+}
+
+.ds-product-page-hr {
+    margin: 3.25rem 0;
+}
