--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,7 +2,7 @@
 .ds-footer-top {
     position: relative;
     padding: 80px 0 20px;
-    background: url('../images/banner-nav.jpg') 50% 50% no-repeat;
+    background: url('../images/bg/footer-bg.jpg') 50% 50% no-repeat;
     background-size: cover;
     &:after {
         @include bg-overlay($ds-black,
