refactor Portfolio component

--- a/src/scss/pages/_front-page.scss
+++ b/src/scss/pages/_front-page.scss
@@ -8,7 +8,7 @@
     padding: 70px 0 75px;
 }
 
-.ds-front-page-portfolio-last {
+.ds-front-page-portfolio-last:last-child {
     margin-top: 29px;
 }
 
