--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -14,3 +14,18 @@ h5 {
     font-size: 1.125rem !important;
 }
 
+.input-group-addon {
+    padding: .375rem .75rem;
+    margin-bottom: 0;
+    font-size: .875rem;
+    font-weight: 400;
+    line-height: 1.75;
+    color: #495057;
+    text-align: center;
+    background-color: #707070;
+    border: 1px solid none;
+    border-radius: 0;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+}
